<resources>
    <string name="app_name">KotlinExamples</string>
    <string name="high_order_function">High Order function</string>
    <string name="passing_lambda_expression_as_parameter">Passing lambda expression as parameter</string>
    <string name="passing_lambda_expression_as_parameter_unit">Lambda expression which return Unit</string>
    <string name="passing_lambda_expression_as_parameter_type">Lambda expression which return any of the value integer,string etc</string>
    <string name="passing_function_expression_as_parameter">Passing function as a parameter to Higher-Order function</string>
    <string name="passing_function_expression_as_parameter_unit">Function which return Unit</string>
    <string name="passing_function_expression_as_parameter_type">Function which return any of the value integer, string etc.</string>
    <string name="high_order_function_title">High Order function - This examples contains below scenarios for High order functions please refer activity code once for better understanding</string>
    <string name="co_routine_title">CoRoutine - This example contains simple Coroutine fuctions uing launch and async(This does not contain MVVM)</string>
    <string name="call">Launch CoRoutine</string>
    <string name="title_coroutine">CoRoutine</string>
    <string name="using_launch">Using Launch</string>
    <string name="using_async">Using Async\n</string>
    <string name="title_scope_function">Scope function</string>
    <string name="scope_function_desc">This example contains usage of below Scope functions.\nPlease check activity for code \n\n 1. let \n 2.Apply \n 3.Run \n 4. With \n  5. Also</string>
    <string name="extension_function_title">Extension functions - This example will cover below scenarios</string>
    <string name="extension_functions">Extending the String class to reverse the string:    \n
    Extending the List class to find the average of its elements: \n
    Extending the Int class to convert a number to a Roman numeral representation: \n
    Extending the MutableList class to shuffle its elements:\n
    Extending the Double class to round a number to a specified number of decimal places:</string>

</resources>